cmake_minimum_required(VERSION 3.0.0)
project(ItemFactory VERSION 0.0.5)
set(CMAKE_CXX_STANDARD 20)

set(ITEM_FACTORY_DIR ${PROJECT_SOURCE_DIR}/itemfactory)
set(ITEM_FACTORY_SRC_DIR ${ITEM_FACTORY_DIR}/src)
set(ITEM_FACTORY_HEADERS_DIR ${ITEM_FACTORY_DIR}/headers)

set(ITEM_MAP_FACTORY_DIR ${PROJECT_SOURCE_DIR}/mapfactory)
set(ITEM_MAP_FACTORY_SRC_DIR ${ITEM_MAP_FACTORY_DIR}/src)
set(ITEM_MAP_FACTORY_HEADERS_DIR ${ITEM_MAP_FACTORY_DIR}/headers)

include_directories(
    ${ITEM_FACTORY_HEADERS_DIR}
    ${ITEM_MAP_FACTORY_HEADERS_DIR}
    ${CEREAL_DIR}
)

aux_source_directory(${ITEM_FACTORY_SRC_DIR} ITEMFACTORY_SRCS)
aux_source_directory(${ITEM_MAP_FACTORY_SRC_DIR} ITEM_MAPFACTORY_SRCS)

add_library(${PROJECT_NAME} STATIC ${ITEMFACTORY_SRCS} ${ITEM_MAPFACTORY_SRCS})

target_link_directories(${PROJECT_NAME} PUBLIC
    ${ITEM_FACTORY_HEADERS_DIR}
    ${ITEM_MAP_FACTORY_HEADERS_DIR}
)
