cmake_minimum_required(VERSION 3.0.0)
project(ItemLoader VERSION 0.0.5)
set(CMAKE_CXX_STANDARD 20)

set(CONFIG_LOADER_DIR ${PROJECT_SOURCE_DIR}/configloader)
set(CONFIG_LOADER_SRC_DIR ${CONFIG_LOADER_DIR}/src)
set(CONFIG_LOADER_HEADERS_DIR ${CONFIG_LOADER_DIR}/headers)

set(MAP_LOADER_DIR ${PROJECT_SOURCE_DIR}/maploader)
set(MAP_LOADER_SRC_DIR ${MAP_LOADER_DIR}/src)
set(MAP_LOADER_HEADERS_DIR ${MAP_LOADER_DIR}/headers)

set(NAME_LOADER_DIR ${PROJECT_SORUCE_DIR}/nameloader)
set(NAME_LOADER_SRC_DIR ${NAME_LOADER_DIR}/src)
set(NAME_LOADER_HEADERS_DIR ${NAME_LOADER_DIR}/headers)

set(TYPE_LOADER_DIR ${PROJECT_SOURCE_DIR}/typeloader)
set(TYPE_LOADER_SRC_DIR ${TYPE_LOADER_DIR}/src)
set(TYPE_LOADER_HEADERS_DIR ${TYPE_LOADER_DIR}/headers)

aux_source_directory(${CONFIG_LOADER_SRC_DIR} CONFIGLOADER_SRCS)
aux_source_directory(${MAP_LOADER_SRC_DIR} MAPLOADER_SRCS)
aux_source_directory(${NAME_LOADER_SRC_DIR} NAMELOADER_SRCS)
aux_source_directory(${TYPE_LOADER_SRC_DIR} TYPELOADER_SRCS)

add_library(${PROJECT_NAME} STATIC ${CONFIGLOADER_SRCS} ${MAPLOADER_SRCS} ${NAMELOADER_SRCS} ${TYPELOADER_SRCS})

target_link_directories(${PROJECT_NAME} PUBLIC
    ${CONFIG_LOADER_HEADERS_DIR}
    ${MAP_LOADER_HEADERS_DIR}
    ${NAME_LOADER_HEADERS_DIR}
    ${TYPE_LOADER_HEADERS_DIR}
)
